--- a/04_Modeling/CVD_Prediction_Modeling.ipynb
+++ b/04_Modeling/CVD_Prediction_Modeling.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +37,8 @@
     "\n",
     "from sklearn.feature_selection import SelectKBest, f_classif\n",
     "from imblearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "import os\n",
     "import warnings\n",
@@ -45,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +71,7 @@
        "                ('LR', LogisticRegression(C=0.001))])"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -105,14 +107,14 @@
      "text": [
       "\n",
       "Confusion Matrix: \n",
-      " [[1831  745]\n",
-      " [  68  254]]\n",
+      " [[1842  734]\n",
+      " [  69  253]]\n",
       "\n",
-      "Precision: 0.2543\n",
-      "Recall: 0.7888\n",
+      "Precision: 0.2563\n",
+      "Recall: 0.7857\n",
       "\n",
-      "Area under PRC: 0.3362\n",
-      "Area under ROC: 0.7498\n"
+      "Area under PRC: 0.3336\n",
+      "Area under ROC: 0.7504\n"
      ]
     }
    ],
@@ -138,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -147,14 +149,14 @@
      "text": [
       "\n",
       "Confusion Matrix: \n",
-      " [[1855  721]\n",
+      " [[1864  712]\n",
       " [  57  265]]\n",
       "\n",
-      "Precision: 0.2688\n",
+      "Precision: 0.2712\n",
       "Recall: 0.8230\n",
       "\n",
-      "Area under PRC: 0.3615\n",
-      "Area under ROC: 0.7715\n"
+      "Area under PRC: 0.3647\n",
+      "Area under ROC: 0.7733\n"
      ]
     }
    ],
@@ -183,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +196,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = pd.read_csv('../data/X.csv')\n",
+    "y = pd.read_csv('../data/y.csv')\n",
+    "\n",
+    "y = np.array(y).ravel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_tr, X_te, y_train, y_test = train_test_split(X, y, test_size=0.2, stratify=y, random_state=123)\n",
+    "X_tr, X_va, y_train, y_val = train_test_split(X_tr, y_train, test_size=0.25, random_state=123)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -236,13 +260,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9acd315b24064eabbf3b4c040a2599fb",
+       "model_id": "d335f4f788bb42b089793c0f0a84bee5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -256,7 +280,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a0ffc5bfdf014180a48f154d35ff2705",
+       "model_id": "94739db286804eaa97e2a955680c7b8d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -270,7 +294,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "729dc89b40b641ef808ce8382f3e0f22",
+       "model_id": "1fdfabcd87cf4973917133cefbcef85a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -305,16 +329,12 @@
     "    risk_input['diabetes_cat'].replace(['yes','no', 'borderline', \"don't know\"], [1, 0, 1, 0],inplace=True)\n",
     "    risk_input['kidney_cat'].replace(['yes','no'], [1, 0],inplace=True)\n",
     "    risk_input['smoking_cat'].replace(['yes','no'],[1, 0],inplace=True)\n",
-    "    \n",
-    "    steps = [('rus',RandomUnderSampler(random_state=42)), ('LR', LogisticRegression(random_state=42))]\n",
-    "    pipeline = Pipeline(steps)\n",
-    "    params = [{'LR__C':[.001,.01,.1,1,10,100]}]\n",
-    "    lrus_cv = GridSearchCV(pipeline, params, cv=5)\n",
+    "\n",
     "    X_train_2 = X_train[['age', 'family_history_cat', 'diabetes_cat', 'kidney_cat', 'smoking_cat']]\n",
     "    X_val_2 = risk_input\n",
-    "    lrus_cv.fit(X_train_2, y_train)\n",
-    "    y_pred = lrus_cv.predict(X_val_2)\n",
-    "    y_predprob = lrus_cv.predict_proba(X_val_2)[:,1]\n",
+    "    model.fit(X_train_2, y_train)\n",
+    "    y_pred = model.predict(X_val_2)\n",
+    "    y_predprob = model.predict_proba(X_val_2)[:,1]\n",
     "    \n",
     "    with out:\n",
     "        clear_output(True)\n",
